--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@database": ["database/db.tsx"],
+      "@assets/*": ["assets/*"],
+      "@components/*": ["components/*"],
+     "@hooks/*": ["hooks/*"],
+    },
     "target": "es5",
     "lib": [
       "dom",
