--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.6.3",
-    "bootstrap": "^5.1.3"
+    "bootstrap": "^5.1.3",
+    "cors": "2.x",
+    "isomorphic-unfetch": "3.x"
   }
 }
